Fix the color being too light

--- a/app/assets/stylesheets/pages/response.sass
+++ b/app/assets/stylesheets/pages/response.sass
@@ -8,9 +8,6 @@
   font-weight:  600
   font-size:  2em
   color:  #2d3739
-.instructions-content
-  font-weight:  lighter
-
 .question-container
   margin-bottom: 1.1em
 
